// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionIntroPreview should render an error when the content is missing 1`] = `
<styled.div>
  <styled.h1>
    <div
      dangerouslySetInnerHTML={
        {
          "__html": "<p>title</p>",
        }
      }
    />
  </styled.h1>
  <styled.div
    data-test="no-content"
    large={true}
    margin={false}
  >
    Missing Introduction Content
  </styled.div>
</styled.div>
`;

exports[`SectionIntroPreview should render an error when the title is missing 1`] = `
<styled.div>
  <styled.h1>
    <styled.div
      data-test="no-title"
      margin={true}
    >
      Missing Introduction Title
    </styled.div>
  </styled.h1>
  <styled.div
    dangerouslySetInnerHTML={
      {
        "__html": "<h2>Content</h2>",
      }
    }
  />
</styled.div>
`;

exports[`SectionIntroPreview should render with all content 1`] = `
<styled.div>
  <styled.h1>
    <div
      dangerouslySetInnerHTML={
        {
          "__html": "<p>title</p>",
        }
      }
    />
  </styled.h1>
  <styled.div
    dangerouslySetInnerHTML={
      {
        "__html": "<h2>Content</h2>",
      }
    }
  />
</styled.div>
`;
